<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_Perfil"
        android:title="@string/action_Perfil"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Acerca_Nosotros"
        android:title="@string/action_Acerca_Nosotros"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Acerca_Programador"
        android:title="@string/action_Acerca_Programador"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_CerrarSesion"
        android:title="@string/action_CerrarSesion"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Exit"
        android:title="@string/action_Exit"
        app:showAsAction="never" />

</menu>